--- a/testFiles/properties/config.properties
+++ b/testFiles/properties/config.properties
@@ -1,4 +1,4 @@
 CurrencyUnitStorageType = CurrencyUnitJSONStorage
-CurrencyUpdater = CurrencyUpdaterWeb
-CurrencyUpdaterPath = testFiles/json/currenciesUpdater.json
+CurrencyUpdater = CurrencyUpdaterJSON
+CurrencyUpdaterPath = testFiles/json/currencyUpdater.json
 CurrencyUnitStoragePath = testFiles/json/currencyUnitStorage.json
