updating password in process

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
-
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/incomeCalculator
+spring.datasource.username=springuser
+spring.datasource.password=h63Ty9lkj5uI
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
