--- a/AuthApi/pom.xml
+++ b/AuthApi/pom.xml
@@ -61,6 +61,12 @@
             <version>0.9.1</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>com.incomeCalculator</groupId>
+            <artifactId>UserService</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
     <dependencyManagement>
         <dependencies>
