--- a/build
+++ b/build
@@ -13,18 +13,18 @@ while getopts 'CAacus' OPTION; do
         A)docker build -t $cardApiName ./CardApi
           docker build -t $gatewayName ./AuthApi
           docker build -t $userApiName ./UserApi
-          docker pull $cardApiName
-          docker pull $gatewayName
-          docker pull $userApiName
+          docker push $cardApiName
+          docker push $gatewayName
+          docker push $userApiName
             ;;
         a)docker build -t $gatewayName ./AuthApi
-          docker pull $gatewayName
+          docker push $gatewayName
             ;;
         c)docker build -t $cardApiName ./CardApi
-          docker pull $cardApiName
+          docker push $cardApiName
            ;;
         u)docker build -t $userApiName ./UserApi
-          docker pull $userApiName
+          docker push $userApiName
             ;;
         s)docker-compose up -d
             ;;
