--- a/CardApi/src/main/resources/application.properties
+++ b/CardApi/src/main/resources/application.properties
@@ -2,3 +2,5 @@ spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/incomeCalculator
 spring.datasource.username=springuser
 spring.datasource.password=u7YH65Frt4o9
+
+server.port = ${CARD_DOCKER_PORT:8082}
