--- a/UserApi/src/main/resources/application.properties
+++ b/UserApi/src/main/resources/application.properties
@@ -3,3 +3,4 @@ spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/incomeCalculator
 spring.datasource.username=springuser
 spring.datasource.password=u7YH65Frt4o9
 
+server.port = ${USER_DOCKER_PORT:8081}
