--- a/SteamInventoryAPI/pom.xml
+++ b/SteamInventoryAPI/pom.xml
@@ -45,6 +45,12 @@
             <artifactId>UserService</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>com.incomeCalculator</groupId>
+            <artifactId>Core</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
     <build>
