--- a/calculator-chart/templates/url-config.yaml
+++ b/calculator-chart/templates/url-config.yaml
@@ -5,5 +5,10 @@ metadata:
   labels:
     {{- include "calculator-chart.labels" . | nindent 4 }}
 data:
-  USER_API_URL: "http://{{ include "calculator-chart.user_api.service.name" . }}:{{ .Values.user_api.service.port }}/"
-  CARD_API_URL: "http://{{ include "calculator-chart.card_api.service.name" . }}:{{ .Values.card_api.service.port }}/"
+  USER_HOST: userapi
+  USER_PORT: "8080"
+  CARD_HOST: cardapi
+  CARD_PORT: "8080"
+  MYSQL_HOST: mysqldb
+  MYSQL_PORT: "3306"
+  MYSQL_DATABASE: incomeCalculator
