--- a/calculator-chart/templates/tests/test-connection.yaml
+++ b/calculator-chart/templates/tests/test-connection.yaml
@@ -1,15 +1,19 @@
-apiVersion: v1
-kind: Pod
+apiVersion: batch/v1
+kind: Job
 metadata:
-  name: "{{ include "calculator-chart.fullname" . }}-test-connection"
+  name: "{{ .Release.Name }}-interaction-test"
   labels:
     {{- include "calculator-chart.labels" . | nindent 4 }}
   annotations:
     "helm.sh/hook": test
+    "helm.sh/hook-delete-policy": hook-succeeded,hook-failed
 spec:
-  containers:
-    - name: wget
-      image: busybox
-      command: ['wget']
-      args: ['{{ include "calculator-chart.fullname" . }}:{{ .Values.service.port }}']
-  restartPolicy: Never
+  template:
+    spec:
+      containers:
+        - name: test
+          image: busybox
+          command: ['wget']
+          args:  ['{{ include "calculator-chart.gateway.service.name" . }}:{{ .Values.gateway.service.port }}/']
+      restartPolicy: Never
+  backoffLimit: 3
