--- a/calculator-chart/templates/secrets.yaml
+++ b/calculator-chart/templates/secrets.yaml
@@ -7,3 +7,6 @@ metadata:
 type: Opaque
 stringData:
   secret: {{ .Values.secrets.secret }}
+data:
+  MYSQL_USER: c3ByaW5ndXNlcg==
+  MYSQL_PASSWORD: dTdZSDY1RnJ0NG85
